124_compiler/grammar.txt
<program>        ::= <statement_list> "EOF"

<statement_list> ::= <statement> <statement_list>
                   | ε

<statement>      ::= <variable_declaration> ";"
                   | <assignment_statement> ";"
                   | <printing_statement> ";"
                   | <input_statement> ";"
                   | <conditional_statement>

<variable_declaration> ::= ("INT" | "STR") <identifier> ["=" <expression>]

<assignment_statement> ::= <identifier> "=" <expression>

<printing_statement>   ::= "FLEX" (<string> | <int identifier> | <number>)

<input_statement>      ::= "SPILL" <int identifier>

<conditional_statement> ::= "BET" <condition> "THEN" <statement>
                          | "BET" <condition> "THEN" <statement> <elif_branch>
                          | "BET" <condition> "THEN" <statement> <elif_branch> <else_branch>

<elif_branch>          ::= "OTHER_BET" <condition> "THEN" <statement>
                          | "OTHER_BET" <condition> "THEN" <statement> <elif_branch>
                          | ε

<else_branch>          ::= "OTHER" <statement>
                          | ε

<condition>            ::= <expression> <comparison_operator> <expression>

<expression>           ::= <term> {("+" | "-") <term>}

<term>                 ::= <factor> {("*" | "/") <factor>}

<factor>               ::= <number>
                         | <identifier>
                         | "(" <expression> ")"

<comparison_operator>  ::= "IS_EQUAL" | "NOT_EQUAL" | "LESS_THAN" | "GREATER_THAN" 
                         | "LESS_EQUAL" | "GREATER_EQUAL"

<identifier>           ::= [a-zA-Z_][a-zA-Z0-9_]*

<string>               ::= "\"" .*? "\""

<number>               ::= [0-9]+
